# token-prediction

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: codex_task_mvp.toml  data_foundation_prediction_baseline.json  data_foundation_v2_baseline.json  lightgbm_mvp.toml  mvp.toml  stage2_auxiliary_sources.json  stage2_release.json  stage3_release.json  stage4_completion_release.json  stage4_release.json  stage4_selection.json
docs/: architecture.md  data-contract.md  data-foundation-report.md  engineering-stage-delivery.md  preliminary-lightgbm.md  roadmap.md  stage-1-completion.md  stage-2-report.md  stage-3-report.md  stage-4-completion-supplement.md  stage-4-final-report.md  trajectory-data-audit.md
scripts/: audit_bagen_combined.py  audit_bagen_manifest.py  audit_bagen_swebench.py  audit_data_foundation_v2.py  audit_openhands_archive.py  audit_openhands_trajectory.py  audit_stage2_sokoban.py  check_distribution.py  download_bagen.py  download_spend_archive.py  extract_swebench_metadata.mjs  freeze_stage4_completion.py  freeze_trajectory_handoff.py  prepare_stage4_selection.py  run_data_foundation_baseline.py  run_lightgbm_preliminary.py  run_stage2_experiments.py  run_stage3_experiments.py  run_stage4_completion_diagnostics.py  run_stage4_experiments.py  run_stage4_final.py  scan_secrets.py  summarize_stage4_completion.py  verify_data_foundation_baseline.py  verify_data_foundation_prediction_lock.py  verify_stage1_baseline.py  verify_stage2_release.py  verify_stage3_release.py  verify_stage4_completion_release.py  verify_stage4_release.py
(+151 files in other folders)
